# subsquid-portal-blueprint

./: .gitmodules  Cargo.toml  Dockerfile  README.md  remappings.txt
.cursor/rules/: blueprints.mdc
contracts/src/: BlueprintServiceManager.sol  SimplePriceOracle.sol
subsquid-portal-blueprint-bin/: Cargo.toml  build.rs
subsquid-portal-blueprint-bin/src/: main.rs
subsquid-portal-blueprint-lib/: Cargo.toml
subsquid-portal-blueprint-lib/src/: lib.rs
subsquid-portal-blueprint-lib/src/gateway/: mod.rs
subsquid-portal-blueprint-lib/src/jobs/: api_key.rs  configure_gateway.rs  mod.rs  provision.rs
subsquid-portal-blueprint-lib/tests/: e2e.rs
