[package]
name = "subsquid-portal-blueprint-bin"
version = "0.1.0"
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
subsquid-portal-blueprint-lib.workspace = true

blueprint-sdk = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
tower.workspace = true

[build-dependencies]
subsquid-portal-blueprint-lib.workspace = true
blueprint-sdk = { workspace = true, features = ["macros", "build"] }

# TODO: Not yet supported by blueprint-manager: https://github.com/tangle-network/blueprint/issues/730
#[[package.metadata.gadget.Native.sources]]
#owner = "tangle-network"
#repo = "subsquid-portal-blueprint"
#tag = "0.1.0"
#binaries = [
#    { arch = "Amd64", os = "Linux", name = "amd64-linux-subsquid-portal-blueprint-gadget" },
#    { arch = "Arm64", os = "Linux", name = "arm64-linux-subsquid-portal-blueprint-gadget" },
#]
